[project]
name = "phi-interview-questions"
version = "0.1.0"
requires-python = ">3.7"
readme = "README.md"

dependencies = [
  "alembic",
  "bcrypt",
  "celery[redis]",
  "cryptography",
  "fastapi[standard]",
  "httpx",
  "mypy",
  "phidata[aws]==2.5.30",
  "psycopg[binary]",
  "pydantic",
  "pytest",
  "rich",
  "ruff",
  "duckduckgo-search",
  "yfinance",
  "newspaper4k",
  "lxml_html_clean",
  "openai",
  "sqlalchemy",
  "tenacity",
  "typer",
  "types-passlib",
  "types-PyYAML",
  "typing-extensions",
  "websockets",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

# Update this value if the workspace directory is renamed.
# [tool.phidata]
# workspace = "workspace"

[tool.ruff]
line-length = 110
exclude = [".venv*", "db/migrations/*"]
# Ignore `F401` (import violations) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*", "db/migrations/*"]

[[tool.mypy.overrides]]
module = ["setuptools.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true

[tool.pytest.ini_options]
log_cli = true
